--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://manoj-prog.github.io/amazon-clone-test.git",
+  "homepage": "https://github.com/manoj-prog/amazon-clone-test.git",
   "name": "demo",
   "version": "0.1.0",
   "private": true,
